# btc-lightning-client

./: .gitignore  README.md  demo.py  invoice_listener.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/lightning_client/: __init__.py  client.py  lightning_agent.py  lightning_pb2_grpc.py  router_pb2.py  router_pb2_grpc.py
